# pyangles

./: .gitignore  README.md  setup.cfg
src/pyangles/: __init__.py  main.py
tests/: test_ascending_channel.py  test_descending_wedge.py  test_output.py  test_symmetrical_triangle.py
