[metadata]
name = pyangles
version = 0.0.1
author = Paul Bringetto
author_email = plbriqto@gmail.com
description = identify chart patterns in series dataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/pbringetto/pyangles
project_urls =
    Bug Tracker = http://github.com/pbringetto/pyangles/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src